# precice

./: .ci-integration-test-config.xml  .ci-test-config.xml  .clang-format  .clang-tidy  .cmake-format.py  .codespellrc  .gitattributes  .gitignore  .gitmodules  .lgtm.yml  .mailmap  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CTestConfig.cmake  DoxySfile  Doxyfile  ISSUE_DESCRIPTION.md  PRECICEConfig.cmake  Precice.Dockerfile  README  README.md  README.txt  SConstruct  SConstruct-Bluegene  SConstruct-Windows  TODO  anothertest.txt  changelog.txt  codemeta.json  compile_commands.json  integration-test-config.xml  packages.config  precice.yml  preciceConfig.cmake  precice_conda.yml  setup_git.txt  (+2 more)
.github/: pull_request_template.md
_clang-tidy/: CMakeCache.txt  cmake_install.cmake  cmake_uninstall.cmake  compile_commands.json  error.txt  libprecice.pc  output.txt  preciceConfig.cmake  preciceConfigVersion.cmake  preciceTargets.cmake
benchmarks/: bb.cpp  helper.hpp  main.cpp  mesh-index.cpp  mesh-tagging.cpp  rbf-assembly-kernels.cpp  sources.cmake  write-block-vector-data.cpp  write-block-vector-data.xml  write-data.cpp  write-data.xml
cmake/: BackwardsCompatibility.cmake  CPackConfig.cmake  CTestConfig.cmake  CheckCXX11Library.cmake  CheckSTL.cmake  CopyTargetProperty.cmake  DetectGitCommit.cmake  DetectGitRevision.cmake  EnvFile.cmake  LibraryHelpers.cmake  (+19 more)
examples/solverdummies/c/: .gitignore  CMakeLists.txt  README.md  SConstruct  solverdummy.c
examples/solverdummies/cpp/: .gitignore  CMakeLists.txt  README.md  solverdummy.cpp  solverdummy_broken  solverdummy_broken.cpp  test.cmake
tools/communication_dummies/ASCoDTSocketCommunicator/cmake/precice.B/: CMakeLists.txt  Makefile.B  sources.cmake  targets.cmake
tools/communication_dummies/FSIDummies/: .FSIDummies.ascodt  .classpath  .gitignore  CMakeLists.txt
tools/communication_dummies/FSIDummies/cmake/fsi.FSIDummyA/: CMakeLists.txt  Makefile.FSIDummyA  sources.cmake  targets.cmake
tools/communication_dummies/FSIDummies/cmake/fsi.FSIDummyB/: CMakeLists.txt  Makefile.FSIDummyB  sources.cmake  targets.cmake
tools/communication_dummies/FSIDummies/components/c++/: tinyxml_ascodt.cpp  tinyxml_ascodt.h
tools/communication_dummies/FSIDummies/components/c++/fsi/: FSIComm.h  FSICommC2CxxSocketPlainPort.cpp  FSICommC2CxxSocketPlainPort.h  FSICommCProxyNativeSocketDispatcher.cpp  FSICommCxx2SocketPlainPort.cpp  FSICommCxx2SocketPlainPort.h  FSICommNative2JavaPlainPort.cpp  FSICommNative2JavaPlainPort.h  FSICommNative2NativePlainPort.cpp  FSICommNative2NativePlainPort.h  FSICommNativeDispatcher.cpp  FSICommNativeDispatcher.h  FSICommNativeSocketDispatcher.cpp  FSICommNativeSocketDispatcher.h  FSIData.h  FSIDataC2CxxSocketPlainPort.cpp  FSIDataC2CxxSocketPlainPort.h  FSIDataCProxyNativeSocketDispatcher.cpp  FSIDataCxx2SocketPlainPort.cpp  FSIDataCxx2SocketPlainPort.h  FSIDataNative2JavaPlainPort.cpp  FSIDataNative2JavaPlainPort.h  FSIDataNative2NativePlainPort.cpp  FSIDataNative2NativePlainPort.h  FSIDataNativeDispatcher.cpp  FSIDataNativeDispatcher.h  FSIDataNativeSocketDispatcher.cpp  FSIDataNativeSocketDispatcher.h  FSIDummyAAbstractImplementation.cpp  FSIDummyAAbstractImplementation.h  FSIDummyAC2CxxProxy.cpp  FSIDummyAC2CxxProxy.h  FSIDummyBAbstractImplementation.cpp  FSIDummyBAbstractImplementation.h  FSIDummyBC2CxxProxy.cpp  FSIDummyBC2CxxProxy.h  FSITest.h  FSITestC2CxxSocketPlainPort.cpp  FSITestC2CxxSocketPlainPort.h  FSITestCProxyNativeSocketDispatcher.cpp  (+10 more)
tools/communication_dummies/FSIDummies/components/fortran/fsi/: FSIComm2SocketPlainPort.f90  FSIComm2SocketPlainPortProxy.f90  FSICommFNativeSocketDispatcher.f90  FSICommFProxyNativeSocketDispatcher.f90  FSIData2SocketPlainPort.f90  FSIData2SocketPlainPortProxy.f90  FSIDataFNativeSocketDispatcher.f90  FSIDataFProxyNativeSocketDispatcher.f90  FSITest2SocketPlainPort.f90  FSITest2SocketPlainPortProxy.f90  FSITestFNativeSocketDispatcher.f90  FSITestFProxyNativeSocketDispatcher.f90
tools/communication_dummies/FSIDummies/components/java/fsi/: FSIComm.java  FSICommAbstractPort.java  FSICommAbstractSocketPort.java  FSICommDispatcher.java  FSICommNative2JavaPlainPort.java  FSICommNative2NativePlainPort.java  FSICommNativeDispatcher.java  FSICommPlainJavaPort.java  FSICommSocket2JavaPlainPort.java  FSICommSocket2SocketPlainPort.java  FSICommSocketDispatcher.java  FSICommSocketPort.java  FSIData.java  FSIDataAbstractPort.java  FSIDataAbstractSocketPort.java  FSIDataDispatcher.java  FSIDataNative2JavaPlainPort.java  FSIDataNative2NativePlainPort.java  FSIDataNativeDispatcher.java  FSIDataPlainJavaPort.java  FSIDataSocket2JavaPlainPort.java  FSIDataSocket2SocketPlainPort.java  FSIDataSocketDispatcher.java  FSIDataSocketPort.java  FSIDummyA.java  FSIDummyAAbstractJavaImplementation.java  FSIDummyB.java  FSIDummyBAbstractJavaImplementation.java  FSITest.java  FSITestAbstractPort.java  FSITestAbstractSocketPort.java  FSITestDispatcher.java  FSITestNative2JavaPlainPort.java  FSITestNative2NativePlainPort.java  FSITestNativeDispatcher.java  FSITestPlainJavaPort.java  FSITestSocket2JavaPlainPort.java  FSITestSocket2SocketPlainPort.java  FSITestSocketDispatcher.java  FSITestSocketPort.java  (+1 more)
tools/communication_dummies/FSIDummies/settings/: fsi.FSIDummyA.settings  fsi.FSIDummyB.settings
tools/communication_dummies/FSIDummies/sidl/: fsi.FSIDummyA.sidl  fsi.FSIDummyB.sidl
tools/communication_dummies/FSIDummies/src/fsi/: FSIDummyABasisJavaImplementation.java  FSIDummyAImplementation.cpp  FSIDummyAImplementation.h  FSIDummyAJavaImplementation.java  FSIDummyBBasisJavaImplementation.java  FSIDummyBImplementation.cpp  FSIDummyBImplementation.h  FSIDummyBJavaImplementation.java  FSIDummyCommunicator.cpp  FSIDummyCommunicator.h
tools/communication_dummies/FSIDummies/workspace/: FSIDummyWorkbench.workbench  FSIDummyWorkbench.xml
tools/mpi/: CMakeLists.txt  Makefile
tools/mpi/acceptor/: main.cpp
tools/mpi/requester/: main.cpp
tools/solverdummies/cpp/: .gitignore  CMakeLists.txt  README.md  main.cpp  solverdummy.cpp
(+4497 files in other folders)
